force-app/main/default/objects/Deployment__c/fields/Check_Only__c.field-meta.xml
<CustomField>
    <fullName>Check_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this deployment was a validation only</description>
    <label>Check Only (Validate)</label>
    <type>Checkbox</type>
</CustomField>