force-app/main/default/objects/Deployment__c/fields/Deployment_Comments__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Comments__c</fullName>
    <description>Comments about the deployment</description>
    <label>Deployment Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>