force-app/main/default/objects/Deployment__c/fields/Deployment_Date__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Date__c</fullName>
    <description>Date and time when the deployment was initiated</description>
    <label>Deployment Date</label>
    <type>DateTime</type>
</CustomField>