force-app/main/default/objects/Deployment__c/fields/Deployment_ID__c.field-meta.xml
<CustomField>
    <fullName>Deployment_ID__c</fullName>
    <description>The Salesforce ID of the deployment</description>
    <externalId>true</externalId>
    <label>Deployment ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>