force-app/main/default/objects/Deployment__c/fields/Ignore_Warnings__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Warnings__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this deployment should ignore warnings</description>
    <label>Ignore Warnings</label>
    <type>Checkbox</type>
</CustomField>