force-app/main/default/objects/Deployment__c/fields/Rollback_on_Error__c.field-meta.xml
<CustomField>
    <fullName>Rollback_on_Error__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if this deployment should rollback on error</description>
    <label>Rollback on Error</label>
    <type>Checkbox</type>
</CustomField>