force-app/main/default/objects/Deployment__c/fields/Test_Level__c.field-meta.xml
<CustomField>
    <fullName>Test_Level__c</fullName>
    <description>The test level used for this deployment</description>
    <label>Test Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NoTestRun</fullName>
                <default>true</default>
                <label>No Test Run</label>
            </value>
            <value>
                <fullName>RunSpecifiedTests</fullName>
                <label>Run Specified Tests</label>
            </value>
            <value>
                <fullName>RunLocalTests</fullName>
                <label>Run Local Tests</label>
            </value>
            <value>
                <fullName>RunAllTestsInOrg</fullName>
                <label>Run All Tests In Org</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>